--- a/MLFairyApp.iOS/MLFairyApp.iOS/Base.lproj/LaunchScreen.storyboard
+++ b/MLFairyApp.iOS/MLFairyApp.iOS/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina5_9" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -11,15 +15,40 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logobg" translatesAutoresizingMaskIntoConstraints="NO" id="Kxz-1x-c3o">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="mGX-Lx-vM8">
+                                <rect key="frame" x="40" y="299.66666666666669" width="295" height="222.66666666666669"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="mGX-Lx-vM8" secondAttribute="height" multiplier="964:728" id="1wz-Fl-45Z"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="mGX-Lx-vM8" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="Ze5-6b-2t3" secondAttribute="trailing" constant="-40" id="4cG-ub-Txy"/>
+                            <constraint firstItem="mGX-Lx-vM8" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="9Gk-Yi-lhi"/>
+                            <constraint firstItem="mGX-Lx-vM8" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="AgV-we-PXy"/>
+                            <constraint firstAttribute="bottom" secondItem="Kxz-1x-c3o" secondAttribute="bottom" id="FVS-zD-G58"/>
+                            <constraint firstAttribute="trailing" secondItem="Kxz-1x-c3o" secondAttribute="trailing" id="KTR-zW-tfu"/>
+                            <constraint firstItem="Kxz-1x-c3o" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="Lqd-MU-kIo"/>
+                            <constraint firstItem="Kxz-1x-c3o" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="lak-HV-NZD"/>
+                            <constraint firstItem="mGX-Lx-vM8" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="xoS-Uk-lLK"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.173913043478265" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="logo" width="482" height="364"/>
+        <image name="logobg" width="1104" height="1104"/>
+    </resources>
 </document>
