--- a/MLFairyApp.iOS/MLFairyApp.iOS/Base.lproj/Main.storyboard
+++ b/MLFairyApp.iOS/MLFairyApp.iOS/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,90 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MLFairyApp_iOS" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cu5-Lz-CBe">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b6Y-c3-sGm" userLabel="Photo Gallery Button">
+                                <rect key="frame" x="55" y="774" width="48" height="48"/>
+                                <state key="normal" image="photo_library"/>
+                                <connections>
+                                    <action selector="selectPhoto:" destination="BYZ-38-t0r" eventType="touchUpInside" id="QB0-PR-8op"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n5N-EN-nph" userLabel="Download Button ">
+                                <rect key="frame" x="183" y="774" width="48" height="48"/>
+                                <state key="normal" image="download"/>
+                                <connections>
+                                    <action selector="downloadLatest:" destination="BYZ-38-t0r" eventType="touchUpInside" id="c6U-Sa-ygV"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r7A-RQ-1FY" userLabel="Camera Button">
+                                <rect key="frame" x="311" y="774" width="48" height="48"/>
+                                <state key="normal" image="camera"/>
+                                <connections>
+                                    <action selector="takePhoto:" destination="BYZ-38-t0r" eventType="touchUpInside" id="coU-wT-dXs"/>
+                                </connections>
+                            </button>
+                            <view opaque="NO" alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ap5-dt-L3J">
+                                <rect key="frame" x="8" y="729.5" width="398" height="36.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select or take a photo" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lwK-D9-Jru">
+                                        <rect key="frame" x="20" y="8" width="358" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="lwK-D9-Jru" firstAttribute="top" secondItem="ap5-dt-L3J" secondAttribute="top" constant="8" id="4hp-Rm-4Ni"/>
+                                    <constraint firstItem="lwK-D9-Jru" firstAttribute="leading" secondItem="ap5-dt-L3J" secondAttribute="leading" constant="20" id="5Qn-CP-0e4"/>
+                                    <constraint firstAttribute="trailing" secondItem="lwK-D9-Jru" secondAttribute="trailing" constant="20" id="TEr-1e-IUJ"/>
+                                    <constraint firstAttribute="bottom" secondItem="lwK-D9-Jru" secondAttribute="bottom" constant="8" id="t2K-BD-xmK"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="8"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="0.18431372549019609" green="0.23137254901960785" blue="0.31372549019607843" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="r7A-RQ-1FY" secondAttribute="bottom" constant="40" id="0t1-Eu-Hk1"/>
+                            <constraint firstItem="ap5-dt-L3J" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" constant="-8" id="4Ee-5G-rDd"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="b6Y-c3-sGm" secondAttribute="bottom" constant="40" id="6dP-Jc-dao"/>
+                            <constraint firstItem="n5N-EN-nph" firstAttribute="leading" secondItem="b6Y-c3-sGm" secondAttribute="trailing" constant="80" id="D0J-cq-Xhs"/>
+                            <constraint firstAttribute="trailing" secondItem="cu5-Lz-CBe" secondAttribute="trailing" id="D5c-Wu-7xP"/>
+                            <constraint firstItem="n5N-EN-nph" firstAttribute="centerX" secondItem="cu5-Lz-CBe" secondAttribute="centerX" id="DIV-VP-3K3"/>
+                            <constraint firstItem="cu5-Lz-CBe" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="JoZ-KX-4M7"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="n5N-EN-nph" secondAttribute="bottom" constant="40" id="Pyx-FM-waz"/>
+                            <constraint firstItem="ap5-dt-L3J" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="8" id="UOB-DU-YIf"/>
+                            <constraint firstItem="r7A-RQ-1FY" firstAttribute="leading" secondItem="n5N-EN-nph" secondAttribute="trailing" constant="80" id="Ug8-dw-x9k"/>
+                            <constraint firstAttribute="bottom" secondItem="cu5-Lz-CBe" secondAttribute="bottom" id="Uu6-ho-JuH"/>
+                            <constraint firstItem="b6Y-c3-sGm" firstAttribute="top" secondItem="ap5-dt-L3J" secondAttribute="bottom" constant="8" id="ga2-Di-2DS"/>
+                            <constraint firstItem="cu5-Lz-CBe" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="vuI-XY-CEt"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="imageView" destination="cu5-Lz-CBe" id="JyK-Ce-K46"/>
+                        <outlet property="outputLabel" destination="lwK-D9-Jru" id="Jop-5k-ZZG"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="137.68115942028987" y="80.357142857142847"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="camera" width="48" height="48"/>
+        <image name="download" width="48" height="48"/>
+        <image name="photo_library" width="48" height="48"/>
+    </resources>
 </document>
