--- a/MLFairyApp.iOS/MLFairyApp.iOS/Base.lproj/Main.storyboard
+++ b/MLFairyApp.iOS/MLFairyApp.iOS/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cu5-Lz-CBe">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cu5-Lz-CBe">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b6Y-c3-sGm" userLabel="Photo Gallery Button">
@@ -85,6 +85,7 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="cameraButton" destination="r7A-RQ-1FY" id="rY3-S8-HHY"/>
                         <outlet property="imageView" destination="cu5-Lz-CBe" id="JyK-Ce-K46"/>
                         <outlet property="outputLabel" destination="lwK-D9-Jru" id="Jop-5k-ZZG"/>
                     </connections>
