--- a/MLFairyApp.iOS/MLFairyApp.iOS/Base.lproj/Main.storyboard
+++ b/MLFairyApp.iOS/MLFairyApp.iOS/Base.lproj/Main.storyboard
@@ -42,7 +42,7 @@
                                     <action selector="takePhoto:" destination="BYZ-38-t0r" eventType="touchUpInside" id="coU-wT-dXs"/>
                                 </connections>
                             </button>
-                            <view opaque="NO" alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ap5-dt-L3J">
+                            <view opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ap5-dt-L3J">
                                 <rect key="frame" x="8" y="729.5" width="398" height="36.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select or take a photo" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lwK-D9-Jru">
